--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>{{ site.title }}</title>
-        <link rel="stylesheet" type="text/css" href="/css/idrc.css" />
+        <link rel="stylesheet" type="text/css" href="{{ manifest['/css/idrc.css'] }}" />
         <script>document.documentElement.classList.remove('no-js');</script>
+        <script type="text/javascript" src="{{ manifest['/js/idrc.js'] }}" defer></script>
         {% block head %}
         {% endblock %}
     </head>
