feat: set up Netlify CLI, add navigation

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -2,5 +2,5 @@
 // This file contains very basic styles.
 // -----------------------------------------------------------------------------
 a {
-  @apply underline;
+  @apply underline text-blue-600;
 }
