--- a/src/_includes/partials/components/brand.njk
+++ b/src/_includes/partials/components/brand.njk
@@ -1,1 +1,4 @@
-<a rel="home" href="/"><span class="sr-only">Inclusive Design Research Centre</span></a>
+<a rel="home" href="/">
+    {# TODO: Logo #}
+    <span>Inclusive Design Research Centre</span>
+</a>
