--- a/src/_includes/partials/global/footer.njk
+++ b/src/_includes/partials/global/footer.njk
@@ -1,4 +1,6 @@
-<footer role="contentinfo" class="text-center">
-    <p>This work is licensed under a <a rel="external license" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 License</a>.</p>
-    <p>Hosting provided by <a rel="external" href="https://netlify.com">Netlify</a>.</p>
+<footer role="contentinfo" class="mt-auto mb-6 text-center">
+    <div class="container px-6 mx-auto">
+        <p>This work is licensed under a <a rel="external license" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 License</a>.</p>
+        <p>Hosting provided by <a rel="external" href="https://netlify.com">Netlify</a>.</p>
+    </div>
 </footer>
