--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -1,14 +1,12 @@
 {% extends 'layouts/base.njk' %}
 
 {% block content %}
-    <main>
-        <article class="page">
-            <header>
-                <h1>{{ title }}</h1>
-            </header>
-            {{ content | safe }}
-        </article>
-    </main>
+    <article class="container px-6 mx-auto page">
+        <header>
+            <h1>{{ title }}</h1>
+        </header>
+        {{ content | safe }}
+    </article>
 {% endblock %}
 
 {{ content | safe }}
