--- a/src/_includes/partials/global/header.njk
+++ b/src/_includes/partials/global/header.njk
@@ -1,4 +1,6 @@
-<header role="banner">
-    {% include "partials/components/brand.njk" %}
-    {% include "partials/components/navigation.njk" %}
+<header role="banner" class="mt-6">
+    <div class="container px-6 mx-auto">
+        {% include "partials/components/brand.njk" %}
+        {% include "partials/components/navigation.njk" %}
+    </div>
 </header>
