feat: rough home page

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -2,6 +2,7 @@
 <html lang="en-ca" class="no-js">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{{ site.title }}</title>
         <link rel="stylesheet" type="text/css" href="{{ manifest['/css/idrc.css'] }}" />
         <script>document.documentElement.classList.remove('no-js');</script>
