--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.njk' %}
 
 {% block content %}
-    <article class="container px-6 mx-auto page">
+    <article class="container p-6 mx-auto page">
         <header>
             <h1>{{ title }}</h1>
         </header>
