--- a/src/_includes/partials/components/brand.njk
+++ b/src/_includes/partials/components/brand.njk
@@ -1,4 +1,4 @@
-<a rel="home" href="/">
-    {# TODO: Logo #}
-    <span>Inclusive Design Research Centre</span>
+<a class="text-logo" rel="home" href="/">
+    {% include "svg/logo.svg" %}
+    <span class="sr-only">Inclusive Design Research Centre</span>
 </a>
