--- a/src/_includes/partials/global/footer.njk
+++ b/src/_includes/partials/global/footer.njk
@@ -1,6 +1,35 @@
-<footer role="contentinfo" class="mt-auto mb-6 text-center">
-    <div class="container px-6 mx-auto">
-        <p>This work is licensed under a <a rel="external license" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 License</a>.</p>
-        <p>Hosting provided by <a rel="external" href="https://netlify.com">Netlify</a>.</p>
+<footer role="contentinfo" class="mt-auto text-white bg-indigo-900">
+    <div class="container px-6 py-20 mx-auto">
+        <div class="text-white brand">
+            <a rel="home" href="/">
+                {% include "svg/logo.svg" %}
+                <span class="sr-only">Inclusive Design Research Centre</span>
+            </a>
+        </div>
+        <div class="mt-12 social">
+            <p class="h3">Social media</p>
+            <ul class="list-none">
+                <li><a rel="external" href="https://twitter.com/idrc_ocadu/">Twitter</a></li>
+                <li><a rel="external" href="https://medium.com/@jutta.trevira">Medium</a></li>
+                <li><a rel="external" href="https://youtube.com/channel/UCBT-cBmvdLAhCm58ulpBulQ">YouTube</a></li>
+            </ul>
+        </div>
+        <div class="mt-12 contact">
+            <p class="h3">Contact us</p>
+            <p class="h4">Email</p>
+            <p><a href="mailto:idrc@ocadu.ca">idrc@ocadu.ca</a></p>
+            <p class="h4">Address</p>
+            <p>205 Richmond St. W., Second Floor<br />
+            Toronto, Ontario, Canada<br />
+            M5V 1V3
+            </p>
+            <p class="h4">Phone</p>
+            <p>(416) 977-6000 #3968</p>
+            <p class="h4">Fax</p>
+            <p>(416) 977-9844)</p>
+        </div>
+        <div class="mt-12 license-credit">
+            <p class="text-sm" >This work is licensed under a <a rel="external license" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 License</a>. Hosting provided by <a rel="external" href="https://netlify.com">Netlify</a>.</p>
+        </div>
     </div>
 </footer>
