--- a/src/_includes/partials/global/header.njk
+++ b/src/_includes/partials/global/header.njk
@@ -1,5 +1,5 @@
 <header role="banner" class="mt-6">
-    <div class="container px-6 mx-auto">
+    <div class="container flex flex-row items-center px-6 mx-auto">
         {% include "partials/components/brand.njk" %}
         {% include "partials/components/navigation.njk" %}
     </div>
