--- a/src/scss/idrc.scss
+++ b/src/scss/idrc.scss
@@ -34,7 +34,8 @@
 
 // 5. Components
 @import
-  'components/button';
+  'components/button',
+  'components/nav';
 
 // 6. Page-specific styles
 @import
