--- a/src/_includes/partials/components/navigation.njk
+++ b/src/_includes/partials/components/navigation.njk
@@ -1,9 +1,10 @@
-<nav id="menu" aria-labelledby="main-menu">
+<nav class="mt-0 ml-auto" id="menu" aria-labelledby="main-menu">
     <span id="menu-label" class="sr-only">main menu</span>
     {% set navPages = collections.all | eleventyNavigation %}
-    <ul>
+    <button class="lg:hidden" id="menu-toggle" aria-expanded="false">menu</button>
+    <ul class="absolute left-0 flex-col hidden px-6 mt-6 list-none bg-indigo-100 lg:px-0 lg:mt-0 lg:relative lg:flex lg:flex-row">
     {%- for entry in navPages %}
-    <li>
+    <li class="py-2 lg:py-0 lg:pr-4">
         <a {% if entry.url == page.url %}aria-current="page" {% endif %}href="{{ entry.url | url }}">{{ entry.title }}</a>
     </li>
     {%- endfor %}
