--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,3 +1,67 @@
 // -----------------------------------------------------------------------------
 // This file contains all @font-face declarations, if any.
 // -----------------------------------------------------------------------------
+
+@font-face {
+  font-family: 'Merriweather';
+  font-style: normal;
+  font-weight: 900;
+  src:
+    local('Merriweather Black'),
+    local('Merriweather-Black'),
+    url('../fonts/merriweather-v21-latin-900.woff2') format('woff2'),
+    url('../fonts/merriweather-v21-latin-900.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 500;
+  src:
+    local(''),
+    url('../fonts/work-sans-v6-latin-500.woff2') format('woff2'),
+    url('../fonts/work-sans-v6-latin-500.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 600;
+  src:
+    local(''),
+    url('../fonts/work-sans-v6-latin-600.woff2') format('woff2'),
+    url('../fonts/work-sans-v6-latin-600.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src:
+    local('Open Sans Regular'),
+    local('OpenSans-Regular'),
+    url('../fonts/open-sans-v17-latin-regular.woff2') format('woff2'),
+    url('../fonts/open-sans-v17-latin-regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 400;
+  src:
+    local('Open Sans Italic'),
+    local('OpenSans-Italic'),
+    url('../fonts/open-sans-v17-latin-italic.woff2') format('woff2'),
+    url('../fonts/open-sans-v17-latin-italic.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
+  src:
+    local('Open Sans Bold'),
+    local('OpenSans-Bold'),
+    url('../fonts/open-sans-v17-latin-700.woff2') format('woff2'),
+    url('../fonts/open-sans-v17-latin-700.woff') format('woff');
+}
