--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,3 +1,12 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the footer of the site/application.
 // -----------------------------------------------------------------------------
+
+footer .social,
+footer .contact {
+  &::before {
+    content: "";
+
+    @apply block w-full border-b-2 mb-2 bg-white;
+  }
+}
