feat: use data for footer

--- a/src/_includes/partials/global/footer.njk
+++ b/src/_includes/partials/global/footer.njk
@@ -17,16 +17,16 @@
         <div class="mt-12 contact">
             <p class="h3">Contact us</p>
             <p class="h4">Email</p>
-            <p><a href="mailto:idrc@ocadu.ca">idrc@ocadu.ca</a></p>
+            <p><a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
             <p class="h4">Address</p>
             <p>205 Richmond St. W., Second Floor<br />
             Toronto, Ontario, Canada<br />
             M5V 1V3
             </p>
             <p class="h4">Phone</p>
-            <p>(416) 977-6000 #3968</p>
+            <p>{{ site.phone }}</p>
             <p class="h4">Fax</p>
-            <p>(416) 977-9844)</p>
+            <p>{{ site.fax }}</p>
         </div>
         <div class="mt-12 license-credit">
             <p class="text-sm" >This work is licensed under a <a rel="external license" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 License</a>. Hosting provided by <a rel="external" href="https://netlify.com">Netlify</a>.</p>
