fix: add Netlify Identity to main site

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -17,5 +17,6 @@
             {% endblock content %}
         </main>
         {% include "partials/global/footer.njk" %}
+        <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" async defer></script>
     </body>
 </html>
