feat: add images (wip)

--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -7,11 +7,19 @@
             <p class="mt-5 text-sm lg:w-1/2 intro">An international community of open source developers, designers, researchers, advocates, and volunteers who work together to <strong>ensure that emerging technology and practices are designed inclusively</strong>.</p>
         </header>
         {% for section in sections %}
-        <section class="py-20 bg-{{ section.backgroundColour if section.backgroundColour else 'indigo-100' }} text-{{ section.textColour if section.textColour else 'black' }}">
+        <section id="{{ section.title | slug }}" class="py-20 {{ 'mt-16' if section.imagePosition == 'top' }} bg-{{ section.backgroundColour if section.backgroundColour else 'indigo-100' }} text-{{ section.textColour if section.textColour else 'black' }}">
             <div class="container px-6 mx-auto">
-                <span class="block w-20 mb-10 border-b-2 hr border-{{ section.borderColour if section.borderColour else 'black' }}"></span>
-                <h2>{{ section.title }}</h2>
-                {{ section.content | markdown | safe }}
+                {% if section.imagePosition == 'top' %}
+                <img class="mb-20 -mt-40 shadow-{{ section.imageShadow if section.imageShadow else 'indigo-500' }}" src="{{ section.image }}" alt="{{ section.imageAltText }}" />
+                {% endif %}
+                <div class="content">
+                    <span class="block w-20 mb-10 border-b-2 hr border-{{ section.borderColour if section.borderColour else 'black' }}"></span>
+                    <h2>{{ section.title }}</h2>
+                    {{ section.content | markdown | safe }}
+                </div>
+                {% if section.imagePosition == 'bottom' %}
+                <img class="mt-6 shadow-{{ section.imageShadow if section.imageShadow else 'indigo-500' }}" src="{{ section.image }}" alt="{{ section.imageAltText }}" />
+                {% endif %}
             </div>
         </section>
         {% endfor %}
