feat: home page refinements

--- a/src/_includes/partials/global/footer.njk
+++ b/src/_includes/partials/global/footer.njk
@@ -1,32 +1,36 @@
 <footer role="contentinfo" class="mt-auto text-white bg-indigo-900">
-    <div class="container px-6 py-20 mx-auto">
-        <div class="text-white brand">
+    <div class="container px-6 py-20 mx-auto lg:flex lg:flex-row lg:flex-wrap">
+        <div class="text-white brand lg:w-full">
             <a rel="home" href="/">
                 {% include "svg/logo.svg" %}
                 <span class="sr-only">Inclusive Design Research Centre</span>
             </a>
         </div>
-        <div class="mt-12 social">
+        <div class="mt-12 social lg:w-1/3 lg:pr-6">
             <p class="h3">Social media</p>
-            <ul class="list-none">
-                <li><a rel="external" href="https://twitter.com/idrc_ocadu/">Twitter</a></li>
-                <li><a rel="external" href="https://medium.com/@jutta.trevira">Medium</a></li>
-                <li><a rel="external" href="https://youtube.com/channel/UCBT-cBmvdLAhCm58ulpBulQ">YouTube</a></li>
+            <ul class="mt-6 list-none">
+                <li class="mb-2"><a class="no-underline" rel="external" href="https://twitter.com/idrc_ocadu/">{% include 'svg/twitter.svg' %} <span class="underline">Twitter</span></a></li>
+                <li class="mb-2"><a class="no-underline" rel="external" href="https://medium.com/@jutta.trevira">{% include 'svg/medium.svg' %} <span class="underline">Medium</span></a></li>
+                <li class="mb-2"><a class="no-underline" rel="external" href="https://youtube.com/channel/UCBT-cBmvdLAhCm58ulpBulQ">{% include 'svg/youtube.svg' %} <span class="underline">YouTube</span></a></li>
             </ul>
         </div>
-        <div class="mt-12 contact">
-            <p class="h3">Contact us</p>
-            <p class="h4">Email</p>
-            <p><a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
-            <p class="h4">Address</p>
-            <p>205 Richmond St. W., Second Floor<br />
-            Toronto, Ontario, Canada<br />
-            M5V 1V3
-            </p>
-            <p class="h4">Phone</p>
-            <p>{{ site.phone }}</p>
-            <p class="h4">Fax</p>
-            <p>{{ site.fax }}</p>
+        <div class="mt-12 contact lg:w-2/3 lg:flex lg:flex-row lg:flex-wrap">
+            <p class="h3 lg:w-full lg:mb-6">Contact us</p>
+            <div class="lg:w-1/2 lg:mt-0">
+                <p class="h4">Email</p>
+                <p><a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
+                <p class="h4">Address</p>
+                <p>205 Richmond St. W., Second Floor<br />
+                Toronto, Ontario, Canada<br />
+                M5V 1V3
+                </p>
+            </div>
+            <div class="lg:w-1/2">
+                <p class="h4">Phone</p>
+                <p>{{ site.phone }}</p>
+                <p class="h4">Fax</p>
+                <p>{{ site.fax }}</p>
+            </div>
         </div>
         <div class="mt-12 license-credit">
             <p class="text-sm" >This work is licensed under a <a rel="external license" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 License</a>. Hosting provided by <a rel="external" href="https://netlify.com">Netlify</a>.</p>
