--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -9,18 +9,22 @@
             </div>
         </header>
         {% for section in sections %}
-        <section id="{{ section.title | slug }}" class="section section--{{ section.desktopWidth if section.desktopWidth else 'full' }} half py-20 {{ 'lg:text-center' if section.desktopAlignment == 'center' }} {{ 'mt-16' if section.imagePosition == 'top' }} bg-{{ section.backgroundColour if section.backgroundColour else 'indigo-100' }} text-{{ section.textColour if section.textColour else 'black' }}">
+        <section id="{{ section.title | slug }}" class="section section--{{ section.desktopWidth if section.desktopWidth else 'full' }} half py-20 {{ 'lg:text-center' if section.desktopAlignment == 'center' }} {{ 'mt-16' if section.imageOrder == 'top' }} bg-{{ section.backgroundColour if section.backgroundColour else 'indigo-100' }} text-{{ section.textColour if section.textColour else 'black' }}">
             <div class="container px-6 mx-auto lg:flex lg:flex-row lg:justify-between">
-                {% if section.imagePosition == 'top' %}
-                <img class="h-auto lg:w-1/2 {{ 'lg:order-2 lg:ml-12' if section.imageOrderDesktop == 'swap' else 'lg:order-0 lg:mr-12' }} mb-20 -mt-40 shadow-{{ section.imageShadow if section.imageShadow else 'indigo-500' }}" src="{{ section.image }}" alt="{{ section.imageAltText }}" />
+                {% if section.imageOrder == 'start' %}
+                <figure class="lg:w-1/2 {{ 'lg:order-2 lg:ml-12' if section.imageOrderDesktop == 'swap' else 'lg:order-0 lg:mr-12' }} mb-20">
+                    <img class="-mt-40 shadow-indigo-500" src="{{ section.image }}" {% if section.image2x %}srcset="{{ section.image }} 1x, {{ section.image2x }} 2x" {% endif %}alt="{{ section.imageAltText }}" width="640" height="427" />
+                </figure>
                 {% endif %}
                 <div class="{{ 'lg:w-1/2' if section.image else 'lg:w-full' }} section__content lg:order-1">
                     <span class="block w-20 mb-10 {{ 'lg:mx-auto' if section.desktopAlignment == 'center' }} border-b-2 hr border-{{ section.borderColour if section.borderColour else 'black' }}"></span>
                     <h2>{{ section.title }}</h2>
                     {{ section.content | markdown | safe }}
                 </div>
-                {% if section.imagePosition == 'bottom' %}
-                <img class="h-auto lg:w-1/2 {{ 'lg:order-2 lg:ml-12' if section.imageOrderDesktop == 'swap' else 'lg:order-0 lg:mr-12' }} lg:-mt-12 mt-6 shadow-{{ section.imageShadow if section.imageShadow else 'indigo-500' }}" src="{{ section.image }}" alt="{{ section.imageAltText }}" />
+                {% if section.imageOrder == 'end' %}
+                <figure class="lg:w-1/2 {{ 'lg:order-2 lg:ml-12' if section.imageOrderDesktop == 'swap' else 'lg:order-0 lg:mr-12' }} lg:-mt-12 mt-6 shadow-{{ section.imageShadow if section.imageShadow else 'indigo-500' }}">
+                    <img src="{{ section.image }}" {% if section.image2x %}srcset="{{ section.image }} 1x, {{ section.image2x }} 2x" {% endif %}alt="{{ section.imageAltText }}" width="640" height="427" />
+                </figure>
                 {% endif %}
             </div>
         </section>
