--- a/src/_includes/partials/global/header.njk
+++ b/src/_includes/partials/global/header.njk
@@ -1,4 +1,4 @@
-<header role="banner" class="mt-6">
+<header role="banner" class="pt-6 bg-{{ headerbgcolor if headerbgcolor else 'indigo-100' }} text-{{ headertextcolor if headertextcolor else 'black' }}">
     <div class="container flex flex-row items-center px-6 mx-auto">
         {% include "partials/components/brand.njk" %}
         {% include "partials/components/navigation.njk" %}
