--- a/src/_includes/layouts/projects.njk
+++ b/src/_includes/layouts/projects.njk
@@ -1,4 +1,6 @@
-{% extends 'layouts/page.njk' %}
+{% extends 'layouts/base.njk' %}
+
+{% set pageType = 'page--projects-and-tools' %}
 
 {% block content %}
     <article class="container mx-auto">
