feat: visited styles

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -18,10 +18,18 @@ a:focus {
   @apply bg-yellow-500 outline-none;
 }
 
+a:visited {
+  text-decoration-color: #f6e05e;
+}
+
 .bg-indigo-900 {
   a:hover,
   a:focus {
     @apply bg-indigo-500;
+  }
+
+  a:visited {
+    text-decoration-color: #3544d0;
   }
 }
 
@@ -31,6 +39,10 @@ a:focus {
   a:hover,
   a:focus {
     @apply bg-white;
+  }
+
+  a:visited {
+    text-decoration-color: #fff;
   }
 }
 
