feat: link icons, mobile menu

--- a/src/_includes/partials/global/footer.njk
+++ b/src/_includes/partials/global/footer.njk
@@ -2,7 +2,7 @@
     <div class="container px-6 py-20 mx-auto lg:flex lg:flex-row lg:flex-wrap">
         <div class="text-white brand lg:w-full">
             <a rel="home" href="/">
-                {% include "svg/logo.svg" %}
+                {% include "svg/logo-wordmark.svg" %}
                 <span class="sr-only">Inclusive Design Research Centre</span>
             </a>
         </div>
