--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,3 +1,23 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the button component.
 // -----------------------------------------------------------------------------
+button:hover,
+button:focus {
+  @apply bg-yellow-500 outline-none;
+}
+
+.bg-indigo-900 {
+  button:hover,
+  button:focus {
+    @apply bg-indigo-500;
+  }
+}
+
+.bg-blue-500,
+.bg-red-500,
+.bg-yellow-500 {
+  button:hover,
+  button:focus {
+    @apply bg-white;
+  }
+}
