--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>{{ site.title }}</title>
+        {% include "partials/global/meta-info.njk" %}
         <link rel="stylesheet" type="text/css" href="{{ manifest['/css/idrc.css'] }}" />
         <script>document.documentElement.classList.remove('no-js');</script>
         <script type="text/javascript" src="{{ manifest['/js/idrc.js'] }}" defer></script>
