--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         {% include "partials/global/meta-info.njk" %}
         <link rel="stylesheet" type="text/css" href="{{ manifest['/css/idrc.css'] }}" />
+        <link rel="icon" href="/images/favicon.svg" type="image/svg+xml" />       
+        <link rel="icon" href="/images/favicon.png" />       
         <script>document.documentElement.classList.remove('no-js');</script>
         <script type="text/javascript" src="{{ manifest['/js/idrc.js'] }}" defer></script>
         {% block head %}
