fix: adjust SEO issues

--- a/src/_includes/partials/global/meta-info.njk
+++ b/src/_includes/partials/global/meta-info.njk
@@ -12,6 +12,8 @@
 	
 {% if metaDesc %}
     {% set pageDesc = metaDesc %}
+{% else %}
+    {% set pageDesc = site.description %}
 {% endif %}
 	
 <title>{{ pageTitle }}</title>
