--- a/src/manifest.njk
+++ b/src/manifest.njk
@@ -4,7 +4,7 @@ permalink: "/manifest.webmanifest"
 {
   "short_name": "IDRC",
   "name": "{{ site.name }}",
-  "description": "An international community of open source developers, designers, researchers, educators and co-designers who work together to proactively ensure that emerging technology and practices are designed inclusively.",
+  "description": "{{ site.description }}",
   "icons": [
     {
       "src": "/images/icon-192.png",
