--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="{{ manifest['/css/idrc.css'] }}" />
         <link rel="icon" href="/images/favicon.svg" type="image/svg+xml" /> 
         <link rel="icon" href="/images/favicon.png" />
+        <link rel="apple-touch-icon" href="/images/icon-192.png">
         <link rel="manifest" href="/manifest.webmanifest">
         <script>document.documentElement.classList.remove('no-js');</script>
         <script type="text/javascript" src="{{ manifest['/js/idrc.js'] }}" defer></script>
