--- a/src/_includes/partials/global/meta-info.njk
+++ b/src/_includes/partials/global/meta-info.njk
@@ -40,3 +40,5 @@
     <meta property="og:image:alt" content="Preview image for {{ site.name }}" />
     <meta name="twitter:image:alt" content="Preview image for {{ site.name }}" />
 {% endif %}
+
+<meta name="theme-color" content="#00A0CC" />
